# LELA

./: .gitignore  AUTHORS  ChangeLog  MEMORY_MODEL  Makefile.am  PROJECTS  README  TODO  config.h.in  configure.in  lela-config.in  linbox-config.in
doc/: Doxyfile  DoxyfileDev  Makefile.am  config.xsl  docbook.css  linbox-config.1  reference.doxy  tutorial.doxy  tutorial.html  tutorial.xml
doc/reference/: index.html  re01.html  re02.html  re03.html  re04.html  re05.html  re06.html  re07.html  re08.html  re09.html  re10.html  re100.html  re101.html  re102.html  re103.html  re104.html  re105.html  re106.html  re107.html  re108.html  re109.html  re11.html  re110.html  re111.html  re112.html  re113.html  re114.html  re115.html  re116.html  re117.html  re118.html  re119.html  re12.html  re120.html  re121.html  re122.html  re123.html  re124.html  re125.html  re126.html  (+404 more)
lela/: Makefile.am  archetypes.doxy  cblas.h  config-blas.h  dummy.C  integer.h  linbox.doxy
lela/algorithms/: Makefile.am  elimination.h  elimination.tcc  faugere-lachartre.h  faugere-lachartre.tcc  gauss-jordan.h  gauss-jordan.tcc  pivot-strategy.h  pivot-strategy.tcc  strassen-winograd.h  strassen-winograd.tcc
lela/blas/: Makefile.am  blas.doxy  context.h  level1-cblas.h  level1-generic.h  level1-generic.tcc  level1-gf2.h  level1-gf2.tcc  level1-ll.h  level1-modular.h  level1-modular.tcc  level1.h  level2-cblas.h  level2-generic.h  level2-generic.tcc  level2-gf2.h  level2-gf2.tcc  level2-ll.h  level2-modular.h  level2-modular.tcc  level2.h  level3-cblas.h  level3-generic.h  level3-generic.tcc  level3-ll.h  level3-m4ri.h  level3-m4ri.tcc  level3-modular.h  level3-modular.tcc  level3-sw.h  level3.h
lela/element/: Makefile.am  abstract.h  element.doxy  gmp-rational.h  interface.h  rational.h
lela/matrix/: Makefile.am  dense-zero-one.h  dense.h  interface.h  io-png.tcc  io.h  io.tcc  m4ri-matrix.h  matrix.doxy  raw-iterator.h  sparse-zero-one.h  sparse-zero-one.tcc  sparse.h  sparse.tcc  submatrix.h  traits.h  transpose-submatrix.h  transpose.h
lela/randiter/: Makefile.am  archetype.doxy  gf2.h  gmp-rational.h  integers.h  interface.h  mersenne-twister.C  mersenne-twister.h  modular-balanced.h  modular.h  nonzero.h  randiter-wrappers.doxy  randiter.doxy  rationals.h  type-wrapper.h  unparametric.h
lela/ring/: Makefile.am  field.doxy  gf2.h  gmp-rational.h  integers.h  interface.h  modular.h  rationals.C  rationals.h  type-wrapper.h  unparametric.h
lela/solutions/: Makefile.am  echelon-form-gf2.h  echelon-form.h
lela/util/: Makefile.am  commentator.C  commentator.h  debug.C  debug.h  double-word.h  error.C  error.h  property.h  splicer.C  splicer.h  splicer.tcc  timer.C  timer.h  util.doxy
lela/vector/: Makefile.am  bit-iterator.h  bit-subvector-word-aligned.h  bit-subvector.h  bit-vector.h  bit-vector.tcc  dense-interface.h  dense01-interface.h  hybrid.h  hybrid01-interface.h  shifted-vector.h  sparse-interface.h  sparse-subvector-hybrid.h  sparse-subvector-hybrid.tcc  sparse-subvector.h  sparse.h  sparse01-interface.h  stream.h  stream.tcc  subiterator.h  subvector.h  traits.h  vector.doxy
linbox/: Makefile.am  integer.h  linbox-config.h
linbox/algorithms/: Makefile.am  elimination.h  elimination.tcc  faugere-lachartre.h  faugere-lachartre.tcc  gauss-jordan.h  gauss-jordan.inl  gauss-jordan.tcc  strassen-winograd.h  strassen-winograd.tcc
linbox/blas/: Makefile.am  README  blas.doxy  context.h  level1-cblas.h  level1-generic.h  level1-generic.tcc  level1-gf2.h  level1-gf2.tcc  level1-ll.h  level1-ll.tcc  level1-modular.h  level1-modular.tcc  level1.h  level2-cblas.h  level2-generic.h  level2-generic.tcc  level2-gf2.h  level2-gf2.tcc  level2-ll.h  level2-ll.tcc  level2-modular.h  level2-modular.tcc  level2.h  level3-cblas.h  level3-generic.h  level3-generic.tcc  level3-ll.h  level3-ll.tcc  level3-m4ri.h  level3-m4ri.tcc  level3-sw.h  level3.h
linbox/element/: Makefile.am  abstract.h  archetype.h  envelope.h  gmp-rational.h  interface.h
linbox/fflas/: fflas_bounds.inl
linbox/ffpack/: ffpack_charpoly.inl
linbox/field/: Makefile.am  abstract.h  archetype.h  envelope.h  field-interface.h  field-traits.h  gf2.h  gf2.inl  gmp-rational.h  modular-balanced-double.h  modular-balanced-float.h  modular-balanced-int32.h  modular-byte.h  modular-double.h  modular-float.h  modular-int32.h  modular-short.h  modular.h  modular.inl  modular.tcc  unparametric.h
linbox/matrix/: Makefile.am  archetype.h  blas-matrix.h  dense-rows-matrix.h  dense-submatrix.h  dense-submatrix.inl  dense-zero-one.h  dense-zero-one.inl  dense.h  dense.inl  interface.h  io-png.inl  io-png.tcc  io.h  io.inl  io.tcc  m4ri-matrix.h  m4ri-matrix.inl  matrix-category.h  matrix-domain-gf2.h  matrix-domain-gf2.inl  matrix-domain-gf2.tcc  matrix-domain-m4ri.h  matrix-domain.h  matrix-domain.inl  matrix-domain.tcc  matrix-traits.h  raw-iterator.h  sparse-zero-one.h  sparse-zero-one.tcc  sparse.h  sparse.inl  sparse.tcc  submatrix.h  submatrix.inl  traits.h  transpose-matrix.h  transpose-submatrix.h  transpose.h
linbox/randiter/: Makefile.am  abstract.h  archetype.h  envelope.h  gf2.h  gmp-rational.h  (+7 more)
tests/: Makefile.am  benchmark-blas-domain.C  benchmark-blas.C  benchmark-fields.C  benchmark-matrix-domain.C  benchmark-rings.C  run-test-loop.sh  test-bit-subvector.C  test-blas-cblas-module.C  test-blas-domain.C  test-blas-generic-module-gf2.C  test-blas-generic-module.C  test-blas-level1.h  test-blas-level2.h  test-blas-level3.h  test-blas-zp-module.C  test-commentator.C  test-common.C  test-common.h  test-elimination.C  test-faugere-lachartre.C  test-ffpack.C  test-field.h  test-gauss-jordan.C  test-generic-for-quad.h  test-generic.h  test-gf2.C  test-gmp-rational.C  test-hybrid-vector.C  test-integers.C  test-last-invariant-factor.C  test-matrix-domain-gf2.C  test-matrix-domain.C  test-matrix-domain.h  test-matrix.C  test-matrix.h  test-modular-balanced-int32.C  test-modular-byte.C  test-modular-double.C  test-modular-int32.C  (+19 more)
util/: Makefile.am  diff.C  equal.C  is-zero.C  row-echelon-form.C  submatrix.C  support.C  support.h
(+94 files in other folders)
