# Copyright 2011 Bradford Hovinen
# 
# This file is part of LELA, licensed under the GNU General Public
# License version 3. See COPYING for more information.

pkgincludesubdir=$(pkgincludedir)/blas

BASIC_HDRS =			\
	context.h		\
	level1.h		\
	level2.h		\
	level3.h		\
	level1-ll.h		\
	level2-ll.h		\
	level3-ll.h		\
	level1-generic.h	\
	level2-generic.h	\
	level3-generic.h	\
	level1-generic.tcc	\
	level2-generic.tcc	\
	level3-generic.tcc	\
	level1-gf2.h		\
	level1-gf2.tcc		\
	level2-gf2.h		\
	level2-gf2.tcc		\
	level3-m4ri.h		\
	level3-m4ri.tcc		\
	level1-modular.h	\
	level2-modular.h	\
	level3-modular.h	\
	level1-modular.tcc	\
	level2-modular.tcc	\
	level3-modular.tcc	\
	level1-cblas.h		\
	level2-cblas.h		\
	level3-cblas.h		\
	level3-sw.h

pkgincludesub_HEADERS =		\
	$(BASIC_HDRS)

EXTRA_DIST = 			\
	blas.doxy		\
	README

