# Copyright 2011 Bradford Hovinen
# 
# This file is part of LELA, licensed under the GNU General Public
# License version 3. See COPYING for more information.

pkgincludesubdir=$(pkgincludedir)/matrix

BASIC_HDRS =			\
	interface.h		\
	traits.h		\
	io.h			\
	io.tcc			\
	io-png.tcc		\
	raw-iterator.h		\
	sparse.h		\
	sparse.tcc		\
	transpose.h		\
	transpose-submatrix.h	\
	dense.h  		\
	dense-zero-one.h	\
	sparse-zero-one.h	\
	sparse-zero-one.tcc	\
	m4ri-matrix.h		\
	submatrix.h

pkgincludesub_HEADERS =		\
	$(BASIC_HDRS)
