# Copyright 2011 Bradford Hovinen
# 
# This file is part of LELA, licensed under the GNU General Public
# License version 3. See COPYING for more information.

INCLUDES=-I$(top_srcdir) -I$(top_builddir)

pkgincludesubdir=$(pkgincludedir)/solutions

pkgincludesub_HEADERS =		\
	echelon-form.h \
	echelon-form-gf2.h

AM_CPPFLAGS= $(CBLAS_FLAG) $(GMP_CFLAGS)

