# Copyright (c) 2010 the LELA group
# This file is part of LELA
# see COPYING for licence
pkgincludesubdir=$(pkgincludedir)/vector

EXTRA_DIST=			\
	vector.doxy

pkgincludesub_HEADERS=		\
	traits.h		\
	subvector.h		\
	subiterator.h		\
	sparse.h		\
	hybrid.h		\
	stream.h		\
	stream.tcc		\
	bit-iterator.h		\
	bit-vector.h		\
	bit-vector.tcc		\
	bit-subvector.h		\
	bit-subvector-word-aligned.h	\
	shifted-vector.h	\
	sparse-subvector.h	\
	sparse-subvector-hybrid.h	\
	sparse-subvector-hybrid.tcc
