# Copyright 2011 Bradford Hovinen
# 
# This file is part of LELA, licensed under the GNU General Public
# License version 3. See COPYING for more information.

pkgincludesubdir=$(pkgincludedir)/vector

pkgincludesub_HEADERS=		\
	traits.h		\
	dense-interface.h	\
	sparse-interface.h	\
	dense01-interface.h	\
	sparse01-interface.h	\
	hybrid01-interface.h	\
	subvector.h		\
	subiterator.h		\
	sparse.h		\
	hybrid.h		\
	stream.h		\
	stream.tcc		\
	bit-iterator.h		\
	bit-vector.h		\
	bit-vector.tcc		\
	bit-subvector.h		\
	bit-subvector-word-aligned.h	\
	shifted-vector.h	\
	sparse-subvector.h	\
	sparse-subvector-hybrid.h	\
	sparse-subvector-hybrid.tcc
