# Copyright 2011 Bradford Hovinen
# This file is part of LinBox
# see COPYING for licence
pkgincludesubdir=$(pkgincludedir)/blas

BASIC_HDRS =			\
	context.h		\
	level1.h		\
	level2.h		\
	level3.h		\
	level1-generic.h	\
	level2-generic.h	\
	level3-generic.h	\
	level1-generic.tcc	\
	level2-generic.tcc	\
	level3-generic.tcc

pkgincludesub_HEADERS =		\
	$(BASIC_HDRS)

EXTRA_DIST = 			\
	blas.doxy

