# Copyright 2011 Bradford Hovinen
# This file is part of LinBox
# see COPYING for licence
pkgincludesubdir=$(pkgincludedir)/blas

BASIC_HDRS =			\
	context.h		\
	level1.h		\
	level2.h		\
	level3.h		\
	level1-ll.h		\
	level2-ll.h		\
	level3-ll.h		\
	level1-ll.tcc		\
	level2-ll.tcc		\
	level3-ll.tcc		\
	level1-generic.h	\
	level2-generic.h	\
	level3-generic.h	\
	level1-generic.tcc	\
	level2-generic.tcc	\
	level3-generic.tcc	\
	level1-modular.h	\
	level2-modular.h	\
	level1-modular.tcc	\
	level2-modular.tcc	\
	level1-cblas.h		\
	level2-cblas.h		\
	level3-cblas.h

pkgincludesub_HEADERS =		\
	$(BASIC_HDRS)

EXTRA_DIST = 			\
	blas.doxy

