# Copyright (c) 2010 the LinBox group
# This file is part of LinBox
# see COPYING for licence
pkgincludesubdir=$(pkgincludedir)/field

BASIC_HDRS =			\
	field-interface.h	\
	field-traits.h		\
	rebind.h		\
	abstract.h		\
	archetype.h		\
	envelope.h		\
	unparametric.h		\
	gmp-rational.h		\
	modular.h		\
	modular.tcc		\
	modular-int32.h		\
	modular-short.h		\
	modular-byte.h		\
	modular-balanced-double.h	\
	modular-balanced-float.h	\
	modular-balanced-int32.h	\
	modular-double.h	\
	modular-float.h		\
	gf2.h

pkgincludesub_HEADERS =			\
	$(BASIC_HDRS)
