# Copyright (c) 2010 the LinBox group
# This file is part of LinBox
# see COPYING for licence
pkgincludesubdir=$(pkgincludedir)/field

BASIC_HDRS =			\
	ring-interface.h	\
	traits.h		\
	abstract.h		\
	archetype.h		\
	envelope.h		\
	unparametric.h		\
	gmp-rational.h		\
	modular.h		\
	gf2.h

pkgincludesub_HEADERS =			\
	$(BASIC_HDRS)
